box hover added

--- a/style.css
+++ b/style.css
@@ -59,7 +59,6 @@ header .navbar a {
  /* home section start */
 
  .home {
-    /*height: 1219px;*/
     height: 890px;
     background: rgba(255, 144, 14, 0.1);
  }
@@ -135,18 +134,12 @@ header .navbar a {
    
 }
 
-/*.about .container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-}*/
+
 .about .container {
     margin-left: 86px;
     margin-top: 85px;
 }
 .about .about-banner {
-   /*width: 708px;
-   height: 708px;
-   margin-left: 40px;*/
    display: grid;
    grid-template-columns: repeat(2, 0.1fr);
    grid-row-gap: 24px;
@@ -351,6 +344,9 @@ header .navbar a {
     align-items: center;
     text-align: center;
     
+}
+.project .container .box-container .box:hover {
+    background-color: #ea12c2;
 }
 
 .project .container .box-container .box img {
